--- a/src/garbagePickupDemoStyle.css
+++ b/src/garbagePickupDemoStyle.css
@@ -132,7 +132,7 @@ section {
 
 .graphic-display {
   /* width: 360px;
-  height: 260px; */
+    height: 260px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -180,7 +180,7 @@ section {
   }
 }
 
-.garbageStatusAndTrash {
+.garbage-status-trash {
   display: flex;
   flex-direction: column;
   align-items: center;
