--- a/src/garbagePickupDemoStyle.css
+++ b/src/garbagePickupDemoStyle.css
@@ -1,9 +1,6 @@
 body {
   font-family: helvetica, arial, sans-serif;
-  /* margin: 2em; */
   color: #3d3d3d;
-  display: flex;
-  justify-content: center;
 }
 
 .outer-container {
@@ -13,7 +10,6 @@ body {
 
 video {
   display: block;
-  /* border: 1px solid rgb(29, 28, 28); */
 }
 
 section {
@@ -25,10 +21,6 @@ section {
   display: none;
 }
 
-.invisible {
-  opacity: 0.2;
-}
-
 .prediction-window {
   position: absolute;
   z-index: 20;
@@ -36,7 +28,6 @@ section {
 
 .container {
   width: 400px;
-  /* margin-top: 20px; */
   border: 2px solid rgb(221, 220, 220);
   border-radius: 5px;
   display: flex;
@@ -70,14 +61,13 @@ section {
 
 .top-title > h2 {
   margin-top: 20px;
-  /* margin-bottom: 2px; */
 }
 
 .top-title > p {
   margin: 0;
   font-size: 10px;
   font-style: italic;
-  font-color: rgb(59, 59, 59);
+  color: rgb(59, 59, 59);
 }
 .instructions-container {
   display: flex;
@@ -91,7 +81,6 @@ section {
   width: 360px;
   font-size: 11px;
   color: rgb(100, 100, 100);
-  /* border: 1px solid red; */
 }
 
 .instructions > p {
@@ -107,7 +96,6 @@ section {
   display: flex;
   justify-content: space-around;
   margin-bottom: 20px;
-  /* border: 1px solid red; */
 }
 
 .cam-button {
@@ -131,8 +119,6 @@ section {
 }
 
 .graphic-display {
-  /* width: 360px;
-    height: 260px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -220,7 +206,6 @@ section {
   margin: 30px 0;
   width: 360px;
   height: 390px;
-  /* border: 1px solid rgb(187, 187, 187); */
 }
 
 .video-display {
@@ -229,10 +214,6 @@ section {
     rgb(12, 12, 12) 0%,
     rgb(112, 112, 112) 98%
   );
-}
-
-.video-display-load {
-  background: rgb(180, 180, 180);
 }
 
 .stop-webcam-button {
